changed link project

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
   
       <div class="project project-right">
-        <a href="https://dice-game-nu-flame.vercel.app/">
+        <a href="https://dice-game-mu-ivory.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
               <img src="./img/dice.png" height="500px" alt="project-image"/>
