changed link projects

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="box-projects">
       <h2 class="projekts-heading section-heading">Projects</h2>
       <div class="project project-left">
-        <a href="https://quiz-app-git-main-susan-rahmawatis-projects.vercel.app/">
+        <a href="https://quiz-app-ten-silk.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
               <img src="./img/Screenshot 2024-04-20 at 09.14.46.png" height="500px" alt="project-image"/>
