--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
       </h3>
 
       <h4>
-       I committed to the philosophy of life-long learning, The unique combination of creativity, logic,
-            technology and never running out of new things to discover, drives
-            my excitement and passion for web development. When I’m not at my
-            computer I like to spend my time reading, yoga and editing videos.
+        Hey there! I'm all about life-long learning and discovering new things every day. My passion for web development comes from the unique blend of creativity, logic, and technology that keeps me constantly curious and excited about what I do. When I'm not coding away, you'll find me diving into a good book, doing yoga, or editing videos. It's all about keeping the balance and staying inspired! 
       </h4>
 
       <div class="skills-content">
@@ -143,7 +140,7 @@
       </div>
   
       <div class="project project-right">
-        <a href="https://tindog-app-seven.vercel.app/">
+        <a href="https://tindog-app-gamma.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
               <img src="./img/tindog.png" height="500px" alt="project-image"/>
