--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </a>
         <div class="project-info">
           <h3 class="Project-title">Quiz App</h3>
-          <p class="project-description">Live App</p>
+          <p class="project-description"></p>
         </div>
       </div>
   
@@ -170,7 +170,7 @@
         </a>
         <div class="project-info">
           <h3 class="Project-title">Dice Game</h3>
-          <p class="project-description">Live App</p>
+          <p class="project-description"></p>
         </div>
       </div>
   
@@ -184,7 +184,7 @@
         </a>
         <div class="project-info">
           <h3 class="Project-title">Drum Kit</h3>
-          <p class="project-description">Live App</p>
+          <p class="project-description"></p>
         </div>
       </div>
   
@@ -198,7 +198,7 @@
         </a>
         <div class="project-info">
           <h3 class="Project-title">Tindog App</h3>
-          <p class="project-description">Live App</p>
+          <p class="project-description"></p>
         </div>
       </div>
     </div>
@@ -244,9 +244,6 @@
       <a href="https://www.instagram.com/sannfilms/" target="_blank">
         <img src="./img/logo-insta.svg" alt="icon-insta">
       </a>
-      <!-- <a href="" target="_blank">
-        <img src="./svg/logo-linkedin.svg" alt="icon-linkin">
-      </a> -->
     </div>
   </div>
   </footer>
