--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@
 
 <body>
   <!-- Header -->
-  <div id="up"></div>
-  <div id="down"></div>
-  <div id="left"></div>
-  <div id="right"></div>
 
+  <div class="animated-background">
+    <div id="up"></div>
+    <div id="down"></div>
+    <div id="left"></div>
+    <div id="right"></div>
+    </div>
+ 
   <header id="header">
+   
   
     <nav class="navbar">
       <button class="menu-button"></button>
@@ -106,7 +110,7 @@
 
       <h3>
         I'm a JR Developer with experience in
-        <p>HTML & CSS</p>
+        <h2> HTML & CSS </h2>
       </h3>
 
       <p>
@@ -150,7 +154,7 @@
         <a href="https://quiz-app-ten-silk.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
-              <img src="./img/Screenshot 2024-04-20 at 09.14.46.png" height="500px" alt="project-image"/>
+              <img src="./img/Screenshot 2024-04-20 at 09.14.46.png" height="300px" alt="project-image"/>
             </div>
           </div>
         </a>
@@ -164,7 +168,7 @@
         <a href="https://dice-game-mu-ivory.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
-              <img src="./img/dice.png" height="500px" alt="project-image"/>
+              <img src="./img/dice.png" height="300px" alt="project-image"/>
             </div>
           </div>
         </a>
@@ -178,7 +182,7 @@
         <a href="https://webdev-challenges-ki2f.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
-              <img src="./img/drum.png" height="500px" alt="project-image"/>
+              <img src="./img/drum.png" height="300px" alt="project-image"/>
             </div>
           </div>
         </a>
@@ -192,7 +196,7 @@
         <a href="https://tindog-app-gamma.vercel.app/">
           <div class="project-image-container">
             <div class="project-image-image">
-              <img src="./img/tindog.png" height="500px" alt="project-image"/>
+              <img src="./img/tindog.png" height="300px" alt="project-image"/>
             </div>
           </div>
         </a>
